--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-rechasada-por-validacion/tabla-rechasada-por-validacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-rechasada-por-validacion/tabla-rechasada-por-validacion.component.html
@@ -37,7 +37,8 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.id)">Ver detalle</button>
+                <button mat-raised-button color="accent" class="btn-table" 
+                (click)="verDetalle(element.id, element.esNovedad, element.novedadId)">Ver detalle</button>
             </td>
         </ng-container>
     
