--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/tabla-con-disponibilidad-cancelada/tabla-con-disponibilidad-cancelada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/tabla-con-disponibilidad-cancelada/tabla-con-disponibilidad-cancelada.component.html
@@ -29,7 +29,8 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['detalleConDisponibilidadPresupuestal', element.id]" mat-raised-button color="accent" class="btn-table">Ver detalle</a>
+                <a [routerLink]="['detalleConDisponibilidadPresupuestal', element.id, element.esNovedad, element.novedadId]" 
+                mat-raised-button color="accent" class="btn-table">Ver detalle</a>
             </td>
         </ng-container>
     
