--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/tabla-registro-presupuestal/tabla-registro-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/tabla-registro-presupuestal/tabla-registro-presupuestal.component.html
@@ -34,8 +34,8 @@
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element">
-                    <a mat-raised-button color="accent" class="btn-table" *ngIf="element.estado!='Con disponibilidad presupuestal'" [routerLink]="['gestionarDrp', element.id]">Ver detalle</a>
-                    <a mat-raised-button color="accent" class="btn-table" *ngIf="element.estado=='Con disponibilidad presupuestal'" [routerLink]="['gestionarDrp', element.id]">Gestionar DRP</a>
+                    <a mat-raised-button color="accent" class="btn-table" *ngIf="element.estado!='Con disponibilidad presupuestal'" [routerLink]="['gestionarDrp', element.id, element.esNovedad, element.novedadId ]">Ver detalle</a>
+                    <a mat-raised-button color="accent" class="btn-table" *ngIf="element.estado=='Con disponibilidad presupuestal'" [routerLink]="['gestionarDrp', element.id, element.esNovedad, element.novedadId]">Gestionar DRP</a>
                 </td>
             </ng-container>
 
