--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
@@ -60,7 +60,7 @@
             <button mat-raised-button
                     color="accent" 
                     class="btn-table"
-                    *ngIf="element.registroCompletoMuestras !== false"
+                    *ngIf="element.registroCompletoMuestras === true"
                     [routerLink]="[ 'verDetalleAvanceSemanal', element.seguimientoSemanalId ]">
                     Ver detalle
             </button>
