debug avanceSemanal V5 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -45,6 +45,7 @@
             <app-tabla-avance-fisico    [seguimientoSemanal]="seguimientoSemanal"
                                         *ngIf="seguimientoSemanal.flujoInversion.length > 0"
                                         (estadoSemaforoAlerta)="semaforoAvanceFisico = $event; estadoSemaforoAvanceFisico.emit( $event )"
+                                        [avanceFisicoObs]="avanceFisicoObs"
                                         (tieneObservacion)="semaforoAvanceFisico = 'en-proceso'; estadoSemaforoAvanceFisico.emit( 'en-proceso' )">
             </app-tabla-avance-fisico>
         </mat-expansion-panel>
