--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="fechaCargue"  matSortDirection="desc" class="mat-elevation-z8">
             <ng-container matColumnDef="fechaCargue">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;"> Fecha de cargue </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: 'dd/MM/yyyy' }}</b> </td>
