--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/contratistas-gbftrec/contratistas-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/contratistas-gbftrec/contratistas-gbftrec.component.html
@@ -1,26 +1,13 @@
-<mat-card class="shipping-card mainGris">
+<mat-card class="shipping-card mainGris" *ngIf="contratista">
     <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text textoGris">
-            Construir Futuro
+            {{ contratista.nombre }}
         </mat-card-title>
     </mat-card-header>
     <mat-card-content style="text-align: left;">
-        <p><strong>Nit: </strong><em>900.879-765-2</em></p>
-        <p><strong>Representante legal: </strong><em>Juan Pablo Tello Posada</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>103456783</em></p>
-        <p><strong>Valor pagado: </strong><em>$67.000.000</em></p>
-    </mat-card-content>
-</mat-card>
-<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
-    <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text textoGris">
-            Contratista 2
-        </mat-card-title>
-    </mat-card-header>
-    <mat-card-content style="text-align: left;">
-        <p><strong>Nit: </strong><em>900.555-555-0</em></p>
-        <p><strong>Representante legal: </strong><em>Alberto Sandoval Camcho</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>1143765</em></p>
-        <p><strong>Valor pagado: </strong><em>$30.000.000</em></p>
+        <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
+        <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
+        <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion}}</em></p>
+        <p><strong>Valor pagado: </strong><em></em></p>
     </mat-card-content>
 </mat-card>
