--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-og-gbftrec/detalle-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-og-gbftrec/detalle-og-gbftrec.component.html
@@ -1,25 +1,25 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="solicitudPago != null">
     <div class="text-right">
         <a routerLink="/gestionarBalanceFinancieroTrasladoRecursos" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
-    <h1 class="title-menu--h1">Ver detalle ODG_Obra_001</h1>
+    <h1 class="title-menu--h1">Ver detalle {{ solicitudPago.ordenGiro.numeroSolicitud }} </h1>
     <p class="info-sub-title">
-        <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Contratista: <b>Construir futuro</b></span>
+        <span>Número de contrato de obra: <b>{{ contrato.numeroContrato}}</b></span>
+        <span>Contratista: <b>{{ contrato.contratacion.contratista.nombre }}</b></span>
     </p>   
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede educativa: </strong><em>Única Sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
+            <p><strong>Tipo de intervención: </strong><em>{{ contratoInfo[0].tipoIntervencion }}</em></p>
+            <p><strong>Institución Educativa: </strong><em>{{ contratoInfo[0].institucionEducativa }}</em></p>
+            <p><strong>Sede educativa: </strong><em>{{ contratoInfo[0].sede }}</em></p>
+            <p><strong>Departamento: </strong><em>{{ contratoInfo[0].departamento }}</em></p>
+            <p><strong>Municipio: </strong><em>{{ contratoInfo[0].municipio }}</em></p>
         </mat-card-content>
     </mat-card>
     <p class="info-sub-title textoGris">
-        <span><b>Valor total facturado: $15.000.000</b></span>
+        <span><b>{{ solicitudPago.valorFacturado }}</b></span>
     </p>
     <mat-card class="shipping-card mainGris" style="margin-top: 3em;">
         <mat-card-header class="header-card header-card--margin">
