--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
@@ -5,7 +5,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <app-tabla-ejpresupuestal-gbftrec></app-tabla-ejpresupuestal-gbftrec>
+        <app-tabla-ejpresupuestal-gbftrec *ngIf="dataTable.length > 0" [data]="dataTable"></app-tabla-ejpresupuestal-gbftrec>
     </mat-card-content>
 </mat-card>
 <mat-card class="shipping-card mainGris" style="margin-top: 3em;">
