--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
@@ -2,7 +2,7 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="numOrdenGiro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numOrdenGiro }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.ordenGiro.numeroSolicitud }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="contratista">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
@@ -31,7 +31,7 @@
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle()">
+                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.solicitudPagoId)">
                     Ver detalle
                 </button>
             </td>
