--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
     <div align="center">
-        <label class="label-left" for="requiereTrasladoRecursos">¿Se requiere registrar un traslado de
+        <label class="label-left" for="requiereTransladoRecursos">¿Se requiere registrar un traslado de
             recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el
             balance financiero?</label>
     </div>
@@ -8,7 +8,7 @@
         <div class="col-md-12" style="padding-left: 0;">
             <div class="row">
                 <div class="col">
-                    <mat-radio-group class="radioInput" formControlName="requiereTrasladoRecursos" required>
+                    <mat-radio-group class="radioInput" formControlName="requiereTransladoRecursos" required>
                         <mat-radio-button [value]="true">Sí</mat-radio-button>
                         <mat-radio-button [value]="false">No</mat-radio-button>
                     </mat-radio-group>
@@ -18,43 +18,43 @@
                     <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
                         [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
                         matTooltipClass="info-tooltip" *ngIf="
-                      (addressForm.get('requiereTrasladoRecursos').invalid && addressForm.get('requiereTrasladoRecursos').touched) ||
-                      (addressForm.get('requiereTrasladoRecursos').invalid && estaEditando)
+                      (addressForm.get('requiereTransladoRecursos').invalid && addressForm.get('requiereTransladoRecursos').touched) ||
+                      (addressForm.get('requiereTransladoRecursos').invalid && estaEditando)
                     " />
                 </span>
             </div>
         </div>
     </div>
-    <div class="d-flex align-items-center mtop animatedDown" *ngIf="addressForm.get('requiereTrasladoRecursos').value === true">
+    <div class="d-flex align-items-center mtop animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true">
         <div class="text-area-quill izqTitle helperWidthText" [class.color-secondaryColor]="
-            (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
-            (addressForm.get('justificacionTraslado').invalid && estaEditando)
+            (addressForm.get('justificacionTrasladoAportanteFuente').invalid && addressForm.get('justificacionTrasladoAportanteFuente').touched) ||
+            (addressForm.get('justificacionTrasladoAportanteFuente').invalid && estaEditando)
           ">
-            <label for="justificacionTraslado" class="text-area-quill--label" style="font-size: 16px" [ngStyle]="{ color: (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
-            (addressForm.get('justificacionTraslado').invalid && estaEditando) ? '#d21e18' : '#174193' }">
+            <label for="justificacionTrasladoAportanteFuente" class="text-area-quill--label" style="font-size: 16px" [ngStyle]="{ color: (addressForm.get('justificacionTrasladoAportanteFuente').invalid && addressForm.get('justificacionTrasladoAportanteFuente').touched) ||
+            (addressForm.get('justificacionTrasladoAportanteFuente').invalid && estaEditando) ? '#d21e18' : '#174193' }">
             Justificación del traslado entre aportantes y fuentes del proyecto
             </label>
             <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                (onContentChanged)="maxLength($event, 1000)" formControlName="justificacionTraslado"
-                #justificacionTraslado></quill-editor>
+                (onContentChanged)="maxLength($event, 1000)" formControlName="justificacionTrasladoAportanteFuente"
+                #justificacionTrasladoAportanteFuente></quill-editor>
         </div>
-        <span class="contador miles" *ngIf="addressForm.get('justificacionTraslado').value">
-            {{ 1000 - textoLimpio(justificacionTraslado.quillEditor, 1000) }}
+        <span class="contador miles" *ngIf="addressForm.get('justificacionTrasladoAportanteFuente').value">
+            {{ 1000 - textoLimpio(justificacionTrasladoAportanteFuente.quillEditor, 1000) }}
         </span>
         <span class="contador miles"
-            *ngIf="addressForm.get('justificacionTraslado').value === '' || addressForm.get('justificacionTraslado').value === null">
+            *ngIf="addressForm.get('justificacionTrasladoAportanteFuente').value === '' || addressForm.get('justificacionTrasladoAportanteFuente').value === null">
             1000
         </span>
         <span class="icon-incompleto">
             <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
                 [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
                 matTooltipClass="info-tooltip" *ngIf="
-              (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
-              (addressForm.get('justificacionTraslado').invalid && estaEditando)
+              (addressForm.get('justificacionTrasladoAportanteFuente').invalid && addressForm.get('justificacionTrasladoAportanteFuente').touched) ||
+              (addressForm.get('justificacionTrasladoAportanteFuente').invalid && estaEditando)
             " />
         </span>
     </div>
-    <div class="row animatedDown" *ngIf="addressForm.get('requiereTrasladoRecursos').value === true">
+    <div class="row animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true">
         <div class="pr-1">
             <label for="urlSoporte" class="label-left" [class.color-secondaryColor]="
               (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
@@ -84,7 +84,7 @@
     </div>
 </form>
 <!--SOLO PARA EFECTOS DE MAQUETACIÓN-->
-<div class="text-center mb-3em mt-2em animatedDown" *ngIf="addressForm.get('requiereTrasladoRecursos').value === true" >
+<div class="text-center mb-3em mt-2em animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true" >
     <a routerLink="/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
 </div>
-<app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTrasladoRecursos').value === true"></app-tabla-traslados-gbftrec>
+<app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true"></app-tabla-traslados-gbftrec>
