--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -93,7 +93,7 @@
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
         [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]"
-        *ngIf="element.estadoCodigo === '5'">
+        *ngIf="element.estadoCodigo === '5' || element.estadoCodigo === '16'">
         Ver detalle/Editar
       </a>
 
