--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -360,4 +360,23 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.observacionDevolucionTramite">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text"> Observacion de gestión y trámite </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          {{ novedad.fechaCreacion | date: 'dd/MM/yyyy' }}
+        </strong>
+      </p>
+      <p>
+        <strong> ¿Desde la gestión tiene observaciones a la solicitud de novedad?: </strong>
+        Sí
+      </p>
+      <section class="text-justify" [innerHTML]="novedad.observacionDevolucionTramite.observaciones"></section>
+    </mat-card-content>
+  </mat-card>
+
 </section>
