--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -48,22 +48,37 @@
           </div>
         </div>
       </div>
-      <div class="row animatedDown" *ngIf="
-      addressForm.get('instanciaPresentoSolicitud').value !== null &&
-      addressForm.get('instanciaPresentoSolicitud').value !== '3'"> 
+      <div class="row"> 
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" for="fechaSesionInstancia" [class.color-secondaryColor]="
-                addressForm.get('fechaSesionInstancia').invalid && addressForm.get('fechaSesionInstancia').touched ||
-                addressForm.get('fechaSesionInstancia').invalid && estaEditando" required>
+              <label
+                for="fechaSesionInstancia"
+                class="label-left"
+                [class.color-secondaryColor]="
+                  addressForm.get('fechaSesionInstancia').invalid && addressForm.get('fechaSesionInstancia').touched ||
+                  addressForm.get('fechaSesionInstancia').invalid && estaEditando
+                "
+                [class.opacity-08]="addressForm.get('instanciaPresentoSolicitud').value == 3"
+              >
                 Fecha de la sesión de la instancia
               </label>
             </div>
             <div class="col d-flex">
-              <mat-form-field class="example-full-width">
-                <input matInput [matDatepicker]="pickerSesionInstancia" formControlName="fechaSesionInstancia" readonly
-                  (click)="pickerSesionInstancia.open()" placeholder="DD/MM/AAAA">
+              <mat-form-field
+                class="example-full-width"
+                [class.opacity-08]="addressForm.get('instanciaPresentoSolicitud').value == 3"
+              >
+                <input
+                  matInput
+                  [matDatepicker]="pickerSesionInstancia"
+                  formControlName="fechaSesionInstancia"
+                  readonly
+                  (click)="pickerSesionInstancia.open()"
+                  placeholder="DD/MM/AAAA"
+                  [disabled]="addressForm.get('instanciaPresentoSolicitud').value == 3"
+                  [required]="addressForm.get('instanciaPresentoSolicitud').value != 3"
+                />
                 <mat-datepicker #pickerSesionInstancia></mat-datepicker>
               </mat-form-field>
               <button mat-button color="primary" type="button" (click)="pickerSesionInstancia.open()"
